Adding local package

--- a/nuget.config
+++ b/nuget.config
@@ -12,6 +12,7 @@
     <add key="restlessmedia.Module.File" value="https://ci.appveyor.com/nuget/restlessmedia-module-file-agui30dbqcui" />
     <add key="restlessmedia.Module.Email" value="https://ci.appveyor.com/nuget/restlessmedia-module-email-63a5aq3o3m1s" />
     <add key="restlessmedia.Module.Category" value="https://ci.appveyor.com/nuget/restlessmedia-module-category-w2el5yr2jis6" />
+    <add key="restlessmedia.Module.Security" value="https://ci.appveyor.com/nuget/restlessmedia-module-category-w2el5yr2jis6" />
     <add key="FastMapper" value="https://ci.appveyor.com/nuget/fastmapper-teoqoa46xktl" />
     <add key="local" value="packages-local" />
   </packageSources>
