Using account feed

--- a/nuget.config
+++ b/nuget.config
@@ -5,15 +5,7 @@
   </config>
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
-    <add key="SqlBuilder" value="https://ci.appveyor.com/nuget/sqlbuilder-uc5kthsj7gev" />
-    <add key="SqlBuilder.DataServices" value="https://ci.appveyor.com/nuget/sqlbuilder-dataservices-mgj4eviemn4y" />
-    <add key="restlessmedia.Module" value="https://ci.appveyor.com/nuget/restlessmedia-module-1swqomsw85bl" />
-    <add key="restlessmedia.Module.Data.EF" value="https://ci.appveyor.com/nuget/restlessmedia-module-data-ef-770vqv6ct4gp" />
-    <add key="restlessmedia.Module.File" value="https://ci.appveyor.com/nuget/restlessmedia-module-file-agui30dbqcui" />
-    <add key="restlessmedia.Module.Email" value="https://ci.appveyor.com/nuget/restlessmedia-module-email-63a5aq3o3m1s" />
-    <add key="restlessmedia.Module.Category" value="https://ci.appveyor.com/nuget/restlessmedia-module-category-w2el5yr2jis6" />
-    <add key="restlessmedia.Module.Security" value="https://ci.appveyor.com/nuget/restlessmedia-module-category-w2el5yr2jis6" />
-    <add key="FastMapper" value="https://ci.appveyor.com/nuget/fastmapper-teoqoa46xktl" />
+    <add key="restlessmedia" value="https://ci.appveyor.com/nuget/restlessmedia-fqb6idr6vwjb" />
     <add key="local" value="packages-local" />
   </packageSources>
 </configuration>
