--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,10 +2,12 @@ version: 1.0.{build}
 image: Visual Studio 2017
 cache: packages -> **\packages.config
 nuget:
-  account_feed: true
-  project_feed: true
+  account_feed: false
+  project_feed: false
 before_build:
 - cmd: nuget restore
+install:
+  nuget sources add -Name AppVeyorAccount -source https://ci.appveyor.com/nuget/restlessmedia-fqb6idr6vwjb -UserName %APPVEYOR_USERNAME% -password "%APPVEYOR_PASSWORD%"
 build:
   project: restlessmedia.Module.File.sln
   publish_nuget: true
