--- a/src/restlessmedia.Module.Web.csproj
+++ b/src/restlessmedia.Module.Web.csproj
@@ -202,6 +202,7 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="restlessmedia.Module.Web.nuspec" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
