--- a/src/restlessmedia.Module.Web.nuspec
+++ b/src/restlessmedia.Module.Web.nuspec
@@ -10,5 +10,8 @@
     <description>Module web library.</description>
     <copyright>Copyright restlessmedia 2019</copyright>
     <tags></tags>
+	<frameworkAssemblies>
+	  <frameworkAssembly assemblyName="System.Web"  />
+    </frameworkAssemblies>
   </metadata>
 </package>
