--- a/src/restlessmedia.Module.Web.csproj
+++ b/src/restlessmedia.Module.Web.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>restlessmedia.Module.Web</RootNamespace>
     <AssemblyName>restlessmedia.Module.Web</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -205,6 +206,7 @@
     <None Include="restlessmedia.Module.Web.nuspec" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UrlHelper.cs" />
     <Compile Include="WebModuleBase.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
