--- a/src/restlessmedia.Module.Web.csproj
+++ b/src/restlessmedia.Module.Web.csproj
@@ -5,9 +5,9 @@
     <Product>restlessmedia.Module.Web</Product>
     <Description>Module web library.</Description>
     <Copyright>Copyright restlessmedia 2020</Copyright>
-    <Version>5.1.3</Version>
-    <AssemblyVersion>5.1.3</AssemblyVersion>
-    <FileVersion>5.1.3</FileVersion>
+    <Version>5.1.4</Version>
+    <AssemblyVersion>5.1.4</AssemblyVersion>
+    <FileVersion>5.1.4</FileVersion>
     <OutputPath>bin\$(Configuration)\</OutputPath>
     <Authors>Phil Cooper</Authors>
     <PackageId>restlessmedia.Module.Web</PackageId>
@@ -74,7 +74,7 @@
     <PackageReference Include="System.Reflection.Primitives" Version="4.3.0" />
     <PackageReference Include="System.Resources.ResourceManager" Version="4.3.0" />
     <PackageReference Include="System.Runtime" Version="4.3.1" />
-    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="5.0.0-preview.4.20251.6" />
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="4.7.1" />
     <PackageReference Include="System.Runtime.Extensions" Version="4.3.1" />
     <PackageReference Include="System.Runtime.InteropServices" Version="4.3.0" />
     <PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.3.0" />
